--- a/web/st-utils/index.html
+++ b/web/st-utils/index.html
@@ -3,139 +3,503 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sensor Map</title>
+    <title>SensorThings Dashboard</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
     <style>
+        :root {
+            --primary: #3b82f6;
+            --primary-dark: #2563eb;
+            --primary-light: #93c5fd;
+            --success: #22c55e;
+            --danger: #ef4444;
+            --warning: #f59e0b;
+            --gray-50: #f9fafb;
+            --gray-100: #f3f4f6;
+            --gray-200: #e5e7eb;
+            --gray-300: #d1d5db;
+            --gray-400: #9ca3af;
+            --gray-500: #6b7280;
+            --gray-600: #4b5563;
+            --gray-700: #374151;
+            --gray-800: #1f2937;
+            --gray-900: #111827;
+            --gap-color: #fca5a5;
+            --gap-bg: #fee2e2;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            height: 100vh;
+            overflow: hidden;
+            background-color: var(--gray-100);
+            color: var(--gray-800);
+        }
+
+        .app-container {
             display: flex;
             height: 100vh;
-            margin: 0;
-            font-family: Helvetica, Arial, sans-serif;
-            background-color: #f4f4f4;
         }
-        #location-list {
-            width: 25vw;
-            padding: 20px;
-            border-right: 5px solid #ccc;
-            overflow-y: auto;
+
+        /* Sidebar */
+        .sidebar {
+            width: 320px;
             background: white;
-            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-        }
-        #sensor-list h3 {
-            text-align: center;
-            font-size: 1.5em;
-            color: #333;
-        }
-        #sensor-list ul {
-            list-style: none;
-            padding: 0;
-        }
-        #sensor-list li {
-            padding: 10px;
-            border-bottom: 1px solid #ddd;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-        #sensor-list li:hover {
-            background: #eee;
-        }
-        #map {
-            flex-grow: 1;
-            height: 100vh;
-        }
-        .active-location {
-            background-color: #e0f7fa;
-            font-weight: bold;
-        }
-        #status {
-            position: fixed;
-            bottom: 10px;
-            left: 10px;
-            background: rgba(255, 255, 255, 0.8);
-            padding: 5px 10px;
-            border-radius: 4px;
+            border-right: 1px solid var(--gray-200);
+            display: flex;
+            flex-direction: column;
+            box-shadow: 2px 0 8px rgba(0, 0, 0, 0.05);
             z-index: 1000;
-            font-size: 12px;
         }
-        .error {
-            color: red;
+
+        .sidebar-header {
+            padding: 1.5rem;
+            border-bottom: 1px solid var(--gray-200);
+            background: linear-gradient(135deg, var(--primary) 0%, var(--primary-dark) 100%);
+            color: white;
         }
-        .success {
-            color: green;
+
+        .sidebar-header h1 {
+            font-size: 1.5rem;
+            font-weight: 700;
+            margin-bottom: 0.25rem;
         }
-        .warning {
-            color: orange;
+
+        .sidebar-header p {
+            font-size: 0.875rem;
+            opacity: 0.9;
         }
-        .location-details {
-            margin-top: 5px;
-            font-size: 0.9em;
-            color: #666;
-            padding-bottom: 10px;
-        }
-        .datastream-item {
-            margin-left: 15px;
-            font-size: 0.9em;
-        }
-        .datastream-name {
-            font-weight: bold;
-        }
-        .datastream-unit {
-            color: #666;
-            font-style: italic;
-        }
-        .popup-content {
-            max-height: 300px;
+
+        .sidebar-content {
+            flex: 1;
             overflow-y: auto;
-            min-width: 250px;
+            padding: 1rem;
         }
-        .popup-section {
-            margin-top: 10px;
-            border-top: 1px solid #eee;
-            padding-top: 5px;
+
+        .search-box {
+            margin-bottom: 1rem;
         }
+
+        .search-box input {
+            width: 100%;
+            padding: 0.75rem;
+            border: 1px solid var(--gray-300);
+            border-radius: 0.5rem;
+            font-size: 0.875rem;
+            transition: border-color 0.2s;
+        }
+
+        .search-box input:focus {
+            outline: none;
+            border-color: var(--primary);
+            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+        }
+
+        .things-list {
+            list-style: none;
+        }
+
+        .thing-item {
+            padding: 1rem;
+            margin-bottom: 0.5rem;
+            border: 1px solid var(--gray-200);
+            border-radius: 0.5rem;
+            cursor: pointer;
+            transition: all 0.2s;
+            background: white;
+        }
+
+        .thing-item:hover {
+            border-color: var(--primary);
+            box-shadow: 0 2px 8px rgba(59, 130, 246, 0.15);
+            transform: translateY(-1px);
+        }
+
+        .thing-item.active {
+            border-color: var(--primary);
+            background: var(--primary-light);
+            background: linear-gradient(135deg, rgba(59, 130, 246, 0.1) 0%, rgba(59, 130, 246, 0.05) 100%);
+        }
+
         .thing-name {
-            font-weight: bold;
-            color: #2196F3;
+            font-weight: 600;
+            color: var(--gray-900);
+            margin-bottom: 0.25rem;
+        }
+
+        .thing-description {
+            font-size: 0.875rem;
+            color: var(--gray-600);
+            margin-top: 0.5rem;
+        }
+
+        .thing-datastreams {
+            margin-top: 0.75rem;
+            padding-top: 0.75rem;
+            border-top: 1px solid var(--gray-200);
+        }
+
+        .datastream-item {
+            padding: 0.5rem;
+            margin: 0.25rem 0;
+            background: var(--gray-50);
+            border-radius: 0.375rem;
+            cursor: pointer;
+            transition: all 0.2s;
+            font-size: 0.875rem;
+        }
+
+        .datastream-item:hover {
+            background: var(--primary-light);
+            color: var(--primary-dark);
+        }
+
+        .datastream-item.active {
+            background: var(--primary);
+            color: white;
+        }
+
+        .datastream-name {
+            font-weight: 500;
+            margin-bottom: 0.25rem;
+        }
+
+        .datastream-meta {
+            font-size: 0.75rem;
+            opacity: 0.8;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .datastream-latest {
+            font-weight: 600;
+        }
+
+        /* Main content area */
+        .main-content {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            position: relative;
+        }
+
+        .map-container {
+            flex: 1;
+            position: relative;
+        }
+
+        #map {
+            width: 100%;
+            height: 100%;
+        }
+
+        /* Chart panel */
+        .chart-panel {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: white;
+            border-top: 2px solid var(--primary);
+            box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.15);
+            transform: translateY(calc(100% - 60px));
+            transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            z-index: 1000;
+            display: flex;
+            flex-direction: column;
+            max-height: 70vh;
+        }
+
+        .chart-panel.expanded {
+            transform: translateY(0);
+        }
+
+        .chart-panel-header {
+            padding: 1rem 1.5rem;
+            background: linear-gradient(135deg, var(--primary) 0%, var(--primary-dark) 100%);
+            color: white;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            cursor: pointer;
+            min-height: 60px;
+        }
+
+        .chart-panel-title {
+            flex: 1;
+        }
+
+        .chart-panel-title h2 {
+            font-size: 1.25rem;
+            font-weight: 600;
+            margin-bottom: 0.25rem;
+        }
+
+        .chart-panel-title p {
+            font-size: 0.875rem;
+            opacity: 0.9;
+        }
+
+        .chart-panel-controls {
+            display: flex;
+            gap: 0.5rem;
+            align-items: center;
+        }
+
+        .chart-panel-btn {
+            padding: 0.5rem 1rem;
+            background: rgba(255, 255, 255, 0.2);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            border-radius: 0.375rem;
+            color: white;
+            cursor: pointer;
+            font-size: 0.875rem;
+            transition: all 0.2s;
+        }
+
+        .chart-panel-btn:hover {
+            background: rgba(255, 255, 255, 0.3);
+        }
+
+        .chart-panel-btn.active {
+            background: white;
+            color: var(--primary);
+        }
+
+        .chart-panel-toggle {
+            background: none;
+            border: none;
+            color: white;
+            cursor: pointer;
+            padding: 0.5rem;
+            border-radius: 0.375rem;
+            transition: background 0.2s;
+        }
+
+        .chart-panel-toggle:hover {
+            background: rgba(255, 255, 255, 0.2);
+        }
+
+        .chart-panel-content {
+            flex: 1;
+            overflow-y: auto;
+            padding: 1.5rem;
+        }
+
+        .chart-stats {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 1rem;
+            margin-bottom: 1.5rem;
+        }
+
+        .stat-card {
+            background: var(--gray-50);
+            padding: 1rem;
+            border-radius: 0.5rem;
+            border: 1px solid var(--gray-200);
+        }
+
+        .stat-label {
+            font-size: 0.75rem;
+            color: var(--gray-600);
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+            margin-bottom: 0.25rem;
+        }
+
+        .stat-value {
+            font-size: 1.5rem;
+            font-weight: 700;
+            color: var(--gray-900);
+        }
+
+        .stat-unit {
+            font-size: 0.875rem;
+            color: var(--gray-500);
+            margin-left: 0.25rem;
+        }
+
+        .chart-container {
+            position: relative;
+            height: 400px;
+            margin-bottom: 1rem;
+        }
+
+        .chart-container canvas {
+            max-height: 100%;
+        }
+
+        .no-data-message {
+            text-align: center;
+            padding: 3rem;
+            color: var(--gray-500);
+        }
+
+        .no-data-message h3 {
+            font-size: 1.25rem;
+            margin-bottom: 0.5rem;
+        }
+
+        .gap-indicator {
+            display: inline-block;
+            width: 12px;
+            height: 12px;
+            background: var(--gap-color);
+            border-radius: 50%;
+            margin-right: 0.5rem;
+        }
+
+        .status-bar {
+            position: fixed;
+            bottom: 0;
+            left: 320px;
+            right: 0;
+            background: rgba(255, 255, 255, 0.95);
+            padding: 0.5rem 1rem;
+            border-top: 1px solid var(--gray-200);
+            font-size: 0.875rem;
+            z-index: 999;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .status-message {
+            color: var(--gray-700);
+        }
+
+        .status-message.error {
+            color: var(--danger);
+        }
+
+        .status-message.success {
+            color: var(--success);
+        }
+
+        .status-message.warning {
+            color: var(--warning);
+        }
+
+        /* Loading states */
+        .loading {
+            display: inline-block;
+            width: 16px;
+            height: 16px;
+            border: 2px solid var(--gray-300);
+            border-top-color: var(--primary);
+            border-radius: 50%;
+            animation: spin 0.6s linear infinite;
+        }
+
+        @keyframes spin {
+            to { transform: rotate(360deg); }
+        }
+
+        /* Responsive */
+        @media (max-width: 768px) {
+            .sidebar {
+                width: 280px;
+            }
+
+            .chart-panel {
+                max-height: 80vh;
+            }
+
+            .chart-container {
+                height: 300px;
+            }
+        }
+
+        /* Scrollbar styling */
+        .sidebar-content::-webkit-scrollbar,
+        .chart-panel-content::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        .sidebar-content::-webkit-scrollbar-track,
+        .chart-panel-content::-webkit-scrollbar-track {
+            background: var(--gray-100);
+        }
+
+        .sidebar-content::-webkit-scrollbar-thumb,
+        .chart-panel-content::-webkit-scrollbar-thumb {
+            background: var(--gray-300);
+            border-radius: 4px;
+        }
+
+        .sidebar-content::-webkit-scrollbar-thumb:hover,
+        .chart-panel-content::-webkit-scrollbar-thumb:hover {
+            background: var(--gray-400);
         }
     </style>
 </head>
 <body>
-    <div id="location-list">
-        <h3>Things List</h3>
-        <ul id="locations"></ul>
+    <div class="app-container">
+        <!-- Sidebar -->
+        <div class="sidebar">
+            <div class="sidebar-header">
+                <h1>🌍 SensorThings</h1>
+                <p>Sensor Network Dashboard</p>
+            </div>
+            <div class="sidebar-content">
+                <div class="search-box">
+                    <input type="text" id="searchInput" placeholder="Search things...">
+                </div>
+                <ul class="things-list" id="thingsList"></ul>
+            </div>
+        </div>
+
+        <!-- Main content -->
+        <div class="main-content">
+            <div class="map-container">
+                <div id="map"></div>
+            </div>
+
+            <!-- Chart panel -->
+            <div class="chart-panel" id="chartPanel">
+                <div class="chart-panel-header" id="chartPanelHeader">
+                    <div class="chart-panel-title">
+                        <h2 id="chartTitle">Select a datastream to view chart</h2>
+                        <p id="chartSubtitle">Click on a datastream in the sidebar or map popup</p>
+                    </div>
+                    <div class="chart-panel-controls">
+                        <button class="chart-panel-btn" data-limit="100">100</button>
+                        <button class="chart-panel-btn" data-limit="500">500</button>
+                        <button class="chart-panel-btn active" data-limit="1000">1000</button>
+                        <button class="chart-panel-btn" data-limit="2500">2500</button>
+                        <button class="chart-panel-toggle" id="chartPanelToggle">
+                            <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
+                                <path d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"/>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+                <div class="chart-panel-content" id="chartPanelContent">
+                    <div class="no-data-message">
+                        <h3>No datastream selected</h3>
+                        <p>Select a datastream from the sidebar or map to view its time series data</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Status bar -->
+        <div class="status-bar">
+            <div class="status-message" id="statusMessage">Initializing...</div>
+            <div id="statusDetails"></div>
+        </div>
     </div>
-    <div id="map"></div>
-    <div id="status">Initializing map...</div>
+
     <script src="app.js"></script>
-    <script>
-        // Status display element
-        const statusEl = document.getElementById('status');
-        
-        // Update status with message and optional class
-        function updateStatus(message, className = '') {
-            statusEl.textContent = message;
-            statusEl.className = className;
-        }
-
-        // Initialize map
-        updateStatus('Initializing map...');
-        const map = L.map('map').setView([52.00482, 4.37034], 13); // Default center based on sample data
-
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: '&copy; OpenStreetMap contributors'
-        }).addTo(map);
-
-        const thingsData = {}; // Store location data by ID
-        const thingsByName = {}; // Store location data by name for easier lookup
-
-        fetchThings()
-            .catch(error => {
-                console.error("Error initializing application:", error);
-                updateStatus(`Error initializing application: ${error.message}`, 'error');
-                useSampleData();
-            });
-    </script>
-
 </body>
 </html>
