--- a/web/st-utils/index.html
+++ b/web/st-utils/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SensorThings Dashboard</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
     <style>
@@ -441,6 +444,102 @@
         .chart-panel-content::-webkit-scrollbar-thumb:hover {
             background: var(--gray-400);
         }
+
+        /* Marker cluster styles */
+        .marker-cluster {
+            border: 3px solid white;
+            border-radius: 50%;
+            color: white;
+            font-weight: 700;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+            transition: all 0.2s;
+        }
+
+        .marker-cluster:hover {
+            transform: scale(1.1);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+        }
+
+        .marker-cluster-small {
+            width: 40px;
+            height: 40px;
+            font-size: 12px;
+        }
+
+        .marker-cluster-medium {
+            width: 50px;
+            height: 50px;
+            font-size: 14px;
+        }
+
+        .marker-cluster-large {
+            width: 60px;
+            height: 60px;
+            font-size: 16px;
+        }
+
+        .marker-cluster div {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+        }
+
+        .marker-cluster span {
+            line-height: 1;
+            color: white;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Zoom extents button */
+        .zoom-extents-btn {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            z-index: 1000;
+            background: white;
+            border: 2px solid var(--gray-300);
+            border-radius: 0.5rem;
+            padding: 0.75rem;
+            cursor: pointer;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+            transition: all 0.2s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .zoom-extents-btn:hover {
+            background: var(--primary);
+            border-color: var(--primary);
+            color: white;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+        }
+
+        .zoom-extents-btn svg {
+            width: 20px;
+            height: 20px;
+        }
+
+        .zoom-extents-btn:hover svg {
+            stroke: white;
+        }
+
+        /* Smooth zoom transitions */
+        .leaflet-zoom-animated {
+            transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .leaflet-tile-container {
+            transition: opacity 0.3s ease;
+        }
     </style>
 </head>
 <body>
@@ -463,6 +562,11 @@
         <div class="main-content">
             <div class="map-container">
                 <div id="map"></div>
+                <button class="zoom-extents-btn" id="zoomExtentsBtn" title="Zoom to all sensors">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0zM13 10V7m0 3h3m-3 0H10" />
+                    </svg>
+                </button>
             </div>
 
             <!-- Chart panel -->
