--- a/web/st-utils/index.html
+++ b/web/st-utils/index.html
@@ -144,49 +144,6 @@
             margin-top: 0.5rem;
         }
 
-        .thing-datastreams {
-            margin-top: 0.75rem;
-            padding-top: 0.75rem;
-            border-top: 1px solid var(--gray-200);
-        }
-
-        .datastream-item {
-            padding: 0.5rem;
-            margin: 0.25rem 0;
-            background: var(--gray-50);
-            border-radius: 0.375rem;
-            cursor: pointer;
-            transition: all 0.2s;
-            font-size: 0.875rem;
-        }
-
-        .datastream-item:hover {
-            background: var(--primary-light);
-            color: var(--primary-dark);
-        }
-
-        .datastream-item.active {
-            background: var(--primary);
-            color: white;
-        }
-
-        .datastream-name {
-            font-weight: 500;
-            margin-bottom: 0.25rem;
-        }
-
-        .datastream-meta {
-            font-size: 0.75rem;
-            opacity: 0.8;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .datastream-latest {
-            font-weight: 600;
-        }
-
         /* Main content area */
         .main-content {
             flex: 1;
@@ -215,7 +172,7 @@
             border-top: 2px solid var(--primary);
             box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.15);
             transform: translateY(calc(100% - 60px));
-            transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1), right 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             z-index: 1000;
             display: flex;
             flex-direction: column;
@@ -540,6 +497,130 @@
         .leaflet-tile-container {
             transition: opacity 0.3s ease;
         }
+
+        /* Thing metadata sidebar */
+        .thing-metadata-sidebar {
+            position: absolute;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            width: 400px;
+            background: white;
+            box-shadow: -2px 0 8px rgba(0, 0, 0, 0.15);
+            transform: translateX(100%);
+            transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            z-index: 1001;
+            display: flex;
+            flex-direction: column;
+        }
+
+        /* Adjust chart panel when metadata sidebar is open */
+        .main-content.has-metadata-sidebar .chart-panel {
+            right: 400px;
+        }
+
+        .thing-metadata-sidebar.open {
+            transform: translateX(0);
+        }
+
+        .thing-metadata-header {
+            padding: 1.5rem;
+            border-bottom: 1px solid var(--gray-200);
+            background: linear-gradient(135deg, var(--primary) 0%, var(--primary-dark) 100%);
+            color: white;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .thing-metadata-header h2 {
+            margin: 0;
+            font-size: 1.25rem;
+            font-weight: 600;
+        }
+
+        .thing-metadata-close {
+            background: rgba(255, 255, 255, 0.2);
+            border: none;
+            border-radius: 0.375rem;
+            color: white;
+            cursor: pointer;
+            padding: 0.5rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background 0.2s;
+        }
+
+        .thing-metadata-close:hover {
+            background: rgba(255, 255, 255, 0.3);
+        }
+
+        .thing-metadata-content {
+            flex: 1;
+            overflow-y: auto;
+            padding: 1.5rem;
+        }
+
+        .metadata-section {
+            margin-bottom: 1.5rem;
+        }
+
+        .metadata-section h3 {
+            font-size: 0.875rem;
+            color: var(--gray-600);
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+            margin-bottom: 0.75rem;
+        }
+
+        .metadata-item {
+            margin-bottom: 0.75rem;
+        }
+
+        .metadata-label {
+            font-size: 0.875rem;
+            color: var(--gray-600);
+            margin-bottom: 0.25rem;
+        }
+
+        .metadata-value {
+            font-size: 1rem;
+            color: var(--gray-900);
+            font-weight: 500;
+        }
+
+        .metadata-datastreams {
+            margin-top: 1rem;
+        }
+
+        .metadata-datastream-item {
+            padding: 0.75rem;
+            margin-bottom: 0.5rem;
+            background: var(--gray-50);
+            border-radius: 0.375rem;
+            border: 1px solid var(--gray-200);
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+
+        .metadata-datastream-item:hover {
+            background: var(--primary-light);
+            border-color: var(--primary);
+        }
+
+        .metadata-datastream-name {
+            font-weight: 600;
+            color: var(--gray-900);
+            margin-bottom: 0.25rem;
+        }
+
+        .metadata-datastream-meta {
+            font-size: 0.875rem;
+            color: var(--gray-600);
+            display: flex;
+            justify-content: space-between;
+        }
     </style>
 </head>
 <body>
@@ -567,6 +648,21 @@
                         <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0zM13 10V7m0 3h3m-3 0H10" />
                     </svg>
                 </button>
+            </div>
+
+            <!-- Thing metadata sidebar -->
+            <div class="thing-metadata-sidebar" id="thingMetadataSidebar">
+                <div class="thing-metadata-header">
+                    <h2 id="thingMetadataTitle">Thing Details</h2>
+                    <button class="thing-metadata-close" id="thingMetadataClose">
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
+                            <path d="M10 8.586L2.929 1.515 1.515 2.929 8.586 10l-7.071 7.071 1.414 1.414L10 11.414l7.071 7.071 1.414-1.414L11.414 10l7.071-7.071-1.414-1.414L10 8.586z"/>
+                        </svg>
+                    </button>
+                </div>
+                <div class="thing-metadata-content" id="thingMetadataContent">
+                    <p>Select a thing to view details</p>
+                </div>
             </div>
 
             <!-- Chart panel -->
