--- a/web/st-utils/index.html
+++ b/web/st-utils/index.html
@@ -204,12 +204,18 @@
             background: white;
             border-top: 2px solid var(--primary);
             box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.15);
-            transform: translateY(calc(100% - 60px));
+            transform: translateY(calc(100% - 100px));
             transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1), right 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             z-index: 1000;
             display: flex;
             flex-direction: column;
             max-height: 70vh;
+            overflow: visible; /* Ensure header is not clipped */
+        }
+        
+        .chart-panel:not(.expanded) {
+            /* When collapsed, show only the header with enough space */
+            transform: translateY(calc(100% - 100px));
         }
 
         .chart-panel.expanded {
@@ -225,6 +231,8 @@
             align-items: center;
             cursor: pointer;
             min-height: 60px;
+            flex-shrink: 0; /* Prevent header from shrinking */
+            box-sizing: border-box; /* Include padding in height calculation */
         }
 
         .chart-panel-title {
@@ -281,10 +289,40 @@
             cursor: not-allowed;
         }
 
+        .chart-next-datastream-btn {
+            background: #ef4444;
+            border: none;
+            border-radius: 0.375rem;
+            color: white;
+            cursor: pointer;
+            padding: 0.625rem 1.25rem;
+            font-weight: 600;
+            font-size: 0.875rem;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            transition: all 0.2s;
+            margin-right: 1rem;
+        }
+
+        .chart-next-datastream-btn:hover {
+            background: #dc2626;
+            transform: translateY(-1px);
+            box-shadow: 0 4px 8px rgba(239, 68, 68, 0.3);
+        }
+
+        .chart-next-datastream-btn:disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
+            transform: none;
+            box-shadow: none;
+        }
+
         .chart-panel-controls {
             display: flex;
             gap: 0.5rem;
             align-items: center;
+            margin-left: 1rem; /* Add spacing from navigation button */
         }
 
         .chart-panel-btn {
@@ -325,6 +363,7 @@
             flex: 1;
             overflow-y: auto;
             padding: 1.5rem;
+            padding-bottom: 2rem; /* Extra padding to prevent text cropping */
         }
 
         .chart-stats {
@@ -766,24 +805,16 @@
             <div class="chart-panel" id="chartPanel">
                 <div class="chart-panel-header" id="chartPanelHeader">
                     <div class="chart-panel-title">
-                        <div class="chart-panel-nav">
-                            <button class="chart-nav-btn" id="chartNavPrev" title="Previous datastream" style="display: none;">
-                                <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
-                                    <path d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"/>
-                                </svg>
-                            </button>
-                        </div>
                         <div>
                             <h2 id="chartTitle">Select a datastream to view chart</h2>
                             <p id="chartSubtitle">Click on a datastream in the sidebar or map popup</p>
                         </div>
-                        <div class="chart-panel-nav">
-                            <button class="chart-nav-btn" id="chartNavNext" title="Next datastream" style="display: none;">
-                                <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
-                                    <path d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"/>
-                                </svg>
-                            </button>
-                        </div>
+                        <button class="chart-next-datastream-btn" id="chartNextDatastreamBtn" title="Next Datastream" style="display: none;">
+                            <span>Next Datastream</span>
+                            <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
+                                <path d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"/>
+                            </svg>
+                        </button>
                     </div>
                     <div class="chart-panel-controls">
                         <button class="chart-panel-btn" data-limit="100">100</button>
